--- a/style.css
+++ b/style.css
@@ -15,7 +15,451 @@
 /* -------------------------------------------------------------------------- */
 
 
+	@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300&display=swap');
 
-body {
-	
+	body,ul,ol {
+		margin: 0px;
+		padding: 0px;
+		list-style: none;
+		font-family: 'Lato', sans-serif;
+		font-family: 'Montserrat', sans-serif;
+	}
+	a:hover {
+		outline: none !important;
+		box-shadow: none;
+		text-decoration: none;
+		color: inherit;
+	}
+	img {
+		display: block;
+		max-width: 100%;
+	}
+
+
+	/* Home Page */
+	header {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+	}
+
+	header ul {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	header ul li {
+		margin: 0px 30px;
+	}
+
+	header a {
+		color: #a6300d;
+	}
+
+	header img {
+		margin: 30px auto;
+	}
+
+	div#mainMenuContainer {
+		border: 1px solid #a6300d;
+		border-left: 0;
+		border-right: 0;
+		border-bottom: 0;
+	}
+
+	div#mainMenuContainer li a {display: block;padding: 10px 0px;}
+
+	div#mainMenuContainer {
+	}
+
+	.slick-arrow {
+		display: flex;
+		align-items: center;
+		width: 80px;
+		height: 80px;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		margin: auto;
+		background: none;
+		font-size: 0;
+		z-index: 9;
+		border: 0 !important;
+		outline: none !important;
+	}
+
+	.slick-prev {
+		left: 30px;
+	}
+
+	.slick-next {
+		right: 30px;
+	}
+
+	.slick-arrow::after {
+		content: "";
+		display: block;
+		width: 40px;
+		height: 40px;
+		border: 1px solid #fff;
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin: auto;
+		transform: rotate(45deg);
+	}
+
+	.slick-next:after {
+		border-left: 0;
+		border-bottom: 0;
+	}
+
+	.slick-prev:after {
+		border-right: 0;
+		border-top: 0;
+	}
+	.sliderHomePage img {
+		max-height: 600px;
+		width: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+	h2 {
+		text-align: center;
+		font-weight: 700;
+		padding: 20px 0px;
+		position: relative;
+		max-width: max-content;
+		margin: auto;
+		margin: 40px auto;
+		font-size: 42px;
+	}
+
+	h2 span {
+		color: #a6300d;
+	}
+
+	h2::after {
+		content: "";
+		display: block;
+		max-width: 100%;
+		background: #a6300d;
+		height: 2px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
+	h2::before {
+		background: white;
+		width: 60px;
+		height: 29px;
+		content: "";
+		display: block;
+		position: absolute;
+		right: 0;
+		left: 0;
+		bott]: ;
+		margin: auto;
+		top: auto;
+		bottom: -13px;
+		z-index: 8;
+	}
+
+	p {
+		font-size: 15px;
+		line-height: 27px;
+		margin-bottom: 20px;
+	}
+
+	.classicButton {
+		background: #a6300d;
+		color: #fff;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		max-width: max-content;
+		padding: 10px 50px;
+		margin: 30px 0px 0px;
+		border: 2px solid #a6300d;
+		font-weight: 600;
+		letter-spacing: 1px;
+		transition: 0.6s all;
+	}
+
+	.classicButton:hover {
+		letter-spacing: normal;
+		background: none;
+		color: #a6300d;
+	}
+
+	.sliderSection1 img {min-height: 340px;object-fit: cover;}
+	span.boxo {
+    position: absolute;
+    /* background: red; */
+    width: 20px;
+    height: 20px;
+    bottom: -8px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 9;
+    border: 3px solid #a6300d;
+    transform: rotate(45deg);
+}
+
+.contentHomepage > div {
+    margin: 100px 0px;
+}
+span.boxo {
+    position: absolute;
+    /* background: red; */
+    width: 20px;
+    height: 20px;
+    bottom: -8px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 9;
+    border: 3px solid #a6300d;
+    transform: rotate(45deg);
+}
+
+.contentHomepage > div {
+    margin: 100px 0px;
+}
+
+.boxContainer {
+    margin-bottom: 60px;
+    padding: 0px 0px;
+    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+    transition: 0.6s all;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.boxContainer a {
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.boxContainer h3 {
+    font-size: 25px;
+    font-weight: 700;
+    margin: 0px 0px 10px;
+}
+
+.imageBackgroundContainer {
+    min-height: 250px;
+}
+
+.imageBackgroundContainer img {
+    height: 100%;
+    width: 100%;
+    min-height: 250px;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: 0.6s all;
+}
+
+.boxContainer:hover {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.contentboxContainer {
+    padding: 40px 20px;
+}
+
+.boxContainer:hover  img {
+    border-radius: 0;
+}
+.testimonials {
+    min-height: 600px;
+    display: flex;
+    align-items: center;
+    background-image: url('./images/1.jpeg');
+    background-blend-mode: multiply;
+    background-color: rgba(0,0,0,0.7);
+    color: #fff;
+    padding: 100px 0px;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.contentHomepage > div.testimonials {
+    /* margin: 0px; */
+    margin-bottom: 0px;
+}
+
+.reversed h2::after {
+    background: #fff;
+}
+
+.testimonials {
+    text-align: center;
+}
+
+.testimonials h3 {font-weight: 800;letter-spacing: 1px;font-size: 35px;}
+
+.sliderTestimonials {
+    margin: 90px 0px 0px;
+}
+
+.sliderTestimonials p {
+    max-width: 700px;
+    margin: auto;
+    line-height: 30px;
+    margin: 50px auto;
+}
+footer#footer {
+    background: #f7f7f7f7;
+    /* background: #f9f9f9; */
+    padding: 100px 0px 0px;
+}
+
+footer#footer .container {
+    width: 90%;
+    max-width: 1640px;
+    margin: auto;
+}
+
+footer#footer h3 {
+    font-weight: 700;
+    font-size: 24px;
+    margin: 20px 0px;
+    color: #a6300d;
+}
+
+footer#footer a {
+    color: #000;
+}
+
+footer h4 {
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.blogContainerFooter p {
+    font-size: 13px;
+    color: #000;
+    opacity: 0.8;
+}
+
+.leftCol ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: max-content;
+}
+
+.leftCol li:nth-child(even) {
+    margin: 0px 20px;
+}
+
+footer#footer .leftCol a {
+    font-size: 20px;
+    color: #000;
+}
+
+.footerCopyRIght p {
+    margin: 0px;
+}
+
+.footerCopyRIght {
+    padding: 40px 0px 20px;
+    background: #a6300d;
+    color: #fff;
+    text-align: center;
+    margin-top: 100px;
+    position: relative;
+}
+
+.joinUs p {
+    max-width: 340px;
+    line-height: 30px;
+    font-weight: 500;
+}
+
+.joinUs input {
+    display: block;
+    width: 100%;
+    max-width: 340px;
+    height: 40px;
+    border: 1px solid #a6300d;
+    padding: 0px 10px;
+    font-size: 13px;
+    color: #000;
+    margin: 0px 0px 20px;
+}
+
+.joinUs button {}
+
+.joinUs button {
+    background: #a6300d;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: max-content;
+    padding: 10px 50px;
+    margin: 30px 0px 0px;
+    border: 2px solid #a6300d;
+    font-weight: 600;
+    letter-spacing: 1px;
+    transition: 0.6s all;
+    font-size: 13px;
+}
+
+.joinUs button:hover {
+    background: none;
+    letter-spacing: normal;
+    color: #a6300d;
+}
+
+.footerCopyRIght p {
+    margin: 10px 0px 0px;
+}
+
+.footerCopyRIght ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: max-content;
+    margin: 0px auto;
+}
+
+.footerCopyRIght li a {
+    color: #fff !important;
+    display: block;
+    margin: 0px 20px;
+}
+a.backtoTop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    background: #a6300d;
+    top: -21px;
+    width: 40px;
+    height: 40px;
+    margin: auto;
+    transform: rotate(45deg);
+}
+
+a.backtoTop::after {
+    content: "";
+    display: flex;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border: 3px solid #fff;
+    top: 5px;
+    bottom: 0;
+    margin: auto;
+    left: 5px;
+    right: 0;
+    border-bottom: 0;
+    border-right: 0;
 }
