Blog and Location Page

--- a/style.css
+++ b/style.css
@@ -48,6 +48,12 @@
 		align-items: center;
 		justify-content: center;
 	}
+	html, body {
+		scroll-behavior: smooth;
+	}
+	*:focus {
+		outline: none !important;
+	}
 
 	header ul li {
 		margin: 0px 30px;
@@ -234,7 +240,7 @@ span.boxo {
 }
 
 .boxContainer {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     padding: 0px 0px;
     /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
     transition: 0.6s all;
@@ -383,7 +389,7 @@ footer#footer .leftCol a {
     font-weight: 500;
 }
 
-.joinUs input {
+input[type="text"], input[type="email"], input[type="search"], input[type="password"] {
     display: block;
     width: 100%;
     max-width: 340px;
@@ -462,4 +468,181 @@ a.backtoTop::after {
     right: 0;
     border-bottom: 0;
     border-right: 0;
+}
+div#section1 .row, div#section2 .row {
+    margin: 80px 0px 0px;
+}
+.sliderHomePage {
+    position: relative;
+}
+
+.contentOnslide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    bottom: 0;
+    height: max-content;
+    color: #fff;
+    z-index: 9;
+}
+
+.contentOnslide h2::after {
+    display: none;
+}
+
+.contentOnslide h2:before {
+    display: none;
+}
+div#locations .slidesContainer::before {
+    content: "";
+    display: block;
+    background: #000000ab;
+    z-index: 2;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+.modalLocations .modal-dialog.modal-dialog-centered {
+    max-width: 1640px;
+    width: 80%;
+}
+
+.modalLocations .modal-footer {
+    display: none;
+}
+
+.locationModal img {
+    /* height: 200px; */
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+.modal-header {
+    color: #fff;
+    background: #a6300d;
+}
+
+.modal-header h5 {
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.modal-header button {
+    color: #fff;
+    opacity: 1;
+}
+
+.modal-body {
+    margin: 0px;
+    padding: 0;
+}
+
+.contentModalLocations {
+    padding: 50px 0px;
+}
+
+.contentModalLocations p {
+    max-width: 90%;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.addressAndNumber {
+    max-width: max-content;
+}
+
+.addressAndNumber p {
+    max-width: 70%;
+    line-height: 30px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.addressAndNumber a {
+    margin: 0px;
+    color: #000;
+    font-weight: 500;
+}
+.sliderContainerModal, .sliderContainerModal * {
+    height: 100%;
+    min-height: 500px;
+}
+.blogPage {
+    margin: 100px 0px;
+}
+
+.rightSearchBlog {
+    position: sticky;
+    top: 40px;
+}
+
+.blogImage {
+    min-height: 200px;
+    height: 200px;
+}
+
+.blogImage img {
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.contentBlogBox h3 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 20px 0px 20px;
+}
+
+.contentBlogBox h5 {
+    font-size: 15px;
+}
+
+.contentBlogBox ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contentBlogBox li {
+    font-size: 11px;
+    margin-right: 10px;
+    opacity: 0.5;
+}
+
+.contentBlogBox li:last-child {
+    margin: 0px;
+}
+
+.blogPage .container {max-width: 1640px;width: 80%;}
+
+.contentBlogBox p {
+    line-height: 18px;
+    font-size: 13px;
+    margin: 20px 0px;
+    max-width: 95%;
+    text-align: justify;
+    text-align-last: left;
+}
+
+.blogContainer {
+    margin-bottom: 60px;
+}
+.searchBlog h6 {
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 29px;
+}
+.searchBlog {
+    padding-left: 10%;
+    border-left: 2px solid #a6300d;
+}
+.contentBlogBox a {
+	font-size: 12px;
 }
